# IsoQuant

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  MANUAL.md  README.md  VERSION  barcode_calling.html  changelog.html  changelog.md  citation.html  classification.html  cmd.html  compare_error_rate.py  compare_introns.py  correction_test.py  data.html  detect_barcodes.py  examples.html  feedback.html  formats.html  getting-started.html  getversion.py  index.html  input.html  install_r_packages.py  installation.html  isoquant.py  isoquant_detect_barcodes.py  isoquant_visualize.py  make-targz.sh  mkdocs.yml  output.html  pyproject.toml  requirements.txt  requirements_fusion.txt  requirements_tests.txt  single_cell.html  tox.ini  (+2 more)
docs/: barcode_calling.md  citation.md  classification.md  cmd.md  data.md  examples.md  feedback.md  formats.md  getting-started.md  index.md  input.md  installation.md  output.md  single_cell.md  visualization.md
isoquant_lib/: alignment_info.py  alignment_processor.py  assignment_aggregator.py  assignment_io.py  assignment_loader.py  cage_finder.py  common.py  convert_grouped_counts.py  convert_read_info.py  correction_stats.py  dataset_processor.py  error_codes.py  exon_corrector.py  file_naming.py  file_utils.py  fusion_detector.py  fusion_metadata.py  fusion_validator.py  gene_info.py  gene_model.py  genomic_interval_index.py  graph_based_model_construction.py  gtf2db.py  id_policy.py  illumina_exon_corrector.py  ilp_model.py  input_data_storage.py  intron_graph.py  intron_graph_flow.py  isoform_assignment.py  long_read_assigner.py  long_read_counter.py  long_read_profiles.py  modes.py  multimap_resolver.py  parallel_workers.py  polya_finder.py  post_process.py  process_dict.py  processed_read_manager.py  (+8 more)
isoquant_tests/: console_test.py  test_alignment_info.py  test_barcode2barcode.py  test_barcode_callers.py  test_barcode_common.py  test_barcode_detectors.py  test_ci_config.py  test_common.py  test_common_utilities.py  test_enum_stats.py  test_feature_count_dedup.py  test_file_naming.py  test_file_utils.py  test_fusion_detector.py  test_fusion_metadata.py  test_fusion_validator.py  test_gene_info.py  test_genomic_interval_index.py  test_get_path_to_program.py  test_graph_alt_ends.py  test_id_distributor.py  test_illumina_exon_corrector.py  test_intron_graph.py  test_intron_graph_refine.py  test_iso_quant_mode.py  test_joint_exon_counter.py  test_junction_comparator.py  test_kmer_indexer.py  test_long_read_assigner.py  test_long_read_profile.py  test_mapped_index.py  test_molecule_structure.py  test_output_formats.py  test_polya_cage_finder.py  test_polya_prediction.py  test_read_groups.py  test_serialization.py  test_shared_mem_index.py  test_string_pools.py  test_tenx_split_pipeline.py  (+3 more)
misc/: all_commands.sh  assess_allinfo_quality.py  assess_assignment_quality.py  assess_barcode_quality.py  assess_fusion_quality.py  assess_polya_prediction.py  assess_quantification.py  barcodes_seq_to_spot_id.py  common.py  copyrighter.py  correction_only.py  create_stereo_test_subsets.py  create_test_barcodes.py  denovo_analyse.py  denovo_model_stats.py  extract_barcodes_from_fasta.py  filter_assembled_transcripts.py  gtf_stats.py  inject_bam_tags.py  isoseq_quantification.py  nanosim_quantification.py  prepare_simulated_reduced_db.py  prepare_visium_spot_ids.py  quantification_stats.py  reduced_db_gffcompare.py  split_gffcompare.py  tpm_stats_precision.py  tpm_stats_recall.py  train_polya_tss_model.py
scirpts/: alt_splicing.py  compare_introns.py  count_read_fractions.py  find_tss_polya.py  gtf_splice_sites.py  intron_chain_q.py  polya_tails.py
scripts/: aligned_lengths.py  alt_splicing.py  compare_error_rate.py  compare_introns.py  find_tss_polya.py  get_supported_introns.py  gtf_splice_sites.py  inconsistency_stats.py  (+3 more)
(+349 files in other folders)
