[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "isoquant"
dynamic = ["version"]
description = "Reference-based analysis and quantification of long RNA reads"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.8,<3.14"
authors = [{name = "Andrey Prjibelski"}]
keywords = ["bioinformatics", "transcriptomics", "long-reads", "nanopore", "pacbio", "isoforms"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "gffutils>=0.10.1",
    "pandas>=1.0.1",
    "pysam>=0.15",
    "pyfaidx>=0.7",
    "ssw-py>=1.0.0",
    "pyyaml>=5.4",
    "matplotlib>=3.1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "seaborn>=0.10.0",
    "editdistance>=0.8.1",
    "biopython>=1.76",
    "numba>=0.58",
]

[project.optional-dependencies]
test = [
    "pytest>=5.4.1",
    "pytest-cov>=2.8.1",
    "coverage>=7.6",
]

[project.urls]
Homepage = "https://github.com/ablab/IsoQuant"
Documentation = "https://ablab.github.io/IsoQuant"
Repository = "https://github.com/ablab/IsoQuant"

[project.scripts]
isoquant = "isoquant:main_entry"
isoquant-detect-barcodes = "isoquant_detect_barcodes:main_entry"
isoquant-visualize = "visualize:main"

[tool.setuptools]
packages = ["src", "src.barcode_calling", "src.barcode_calling.callers",
            "src.barcode_calling.indexers", "tests"]
py-modules = ["isoquant", "isoquant_detect_barcodes", "visualize"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
tests = ["simple_data/*"]
